# opencv

./: xy_coordinator.drawio
.ipynb_checkpoints/: find_face_from_image-checkpoint.ipynb  image_load-checkpoint.ipynb
aruco_maker/: CMakeLists.txt  Makefile
aruco_maker/scripts/: find_pattern_chessboard.py
aruco_maker/src/: DisplayImage.cpp  detect_marker.cpp  sample_image.cpp
face_indent/: face_encode.py  face_recognition_knn_camera.py  find_face_from_image.py  indentify_face.py
image/: office1_modify.xcf
jupyter/: PIL_modun_sample.ipynb  find_face_from_image.ipynb  image_load.ipynb
model/: trained_knn_model.clf
script/: bai3.py  bai3_find_face.py  bai4_save_image.py  face_recognition_knn_camera.py  face_recognition_knn_train.py  find_face_from_camera.py  find_face_from_image.py  indentify_face_from_camera.py  map_to_img.py  rotary_image.py
